# mahjong-calc-point

./: README.md  README.roboflow.txt  pyproject.toml
annotation/: .gitignore  README.dataset.txt  data.yaml  yolo.py  yolo_train.py
annotation/runs/train/exp/: opt.yaml
annotation/runs/train/exp2/: opt.yaml
annotation/runs/train/exp3/: events.out.tfevents.1724835219.So-OMEN.4242.0  opt.yaml  results.csv  results.html
src/mahjong_calc_point/: __init__.py  app.py
src/mahjong_calc_point/flask/: app.py
src/mahjong_calc_point/flask/static/: style.css
src/mahjong_calc_point/flask/templates/: index.html
src/mahjong_calc_point/templates/: index.html
src/mahjong_calc_point/yolo/: convert_label.py  real_time.py  yolo_test.py
src/mahjong_calc_point/yolo/runs/detect/exp/labels/: dataset.txt
