[project]
name = "mahjong-calc-point"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "toufu-24", email = "120612884+toufu-24@users.noreply.github.com" }
]
dependencies = [
    "mahjong>=1.2.1",
    "flask>=3.0.3",
    "torch>=2.3.1",
    "numpy<2",
    "yolov5>=7.0.13",
    "opencv-python>=4.10.0.84",
    "pyqt5>=5.15.11",
    "matplotlib>=3.9.2",
    "ultralytics>=8.2.83",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mahjong_calc_point"]
